API: - Include start time in "start" route response for use in clientside - Destroy session programatically in "finish" route - Add Score Model in ORM Client: - Wrap the static image inside a div and memoize it to avoid unnecessary re-renders - Add Stopwatch timer on game start - Add gameover condition - Add marker on spotted characters

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,3 +28,15 @@ img {
   border-radius: 8px;
   text-align: center;
 }
+
+.img-container {
+  position: relative;
+}
+
+.found-icon {
+  position: absolute;
+  width: 3rem;
+  fill: rgb(3, 205, 3);
+  background: rgba(0, 0, 0, 0.7);
+  border-radius: 50%;
+}
